<resources>
    <string name="app_name">ALC 4 PHASE 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="profile_name">Antony Brian</string>
    <string name="country">Country: Kenya</string>
    <string name="pone_number">Pone number: 254707495465</string>
    <string name="slack_usernme">Slack Usernme: @nyaoke</string>
    <string name="track">Track: Android</string>
    <string name="email">Email: briyoantony@gamil.com</string>
</resources>
